<resources>
    <string name="app_name">Yarr Campus</string>

    <!-- BUILDING RELATED STRINGS -->
    <string name="building_menu_button">Campus Building Locator</string>
    <string name="search_building">Search Buildings</string>
    <string name="example_building_search">Ex: Watson Hall</string>
    <string name="building_map_view">Go to map view</string>

    <!-- PROFESSOR RELATED STRINGS-->
    <string name="professor_search_menu_button">Search Professors</string>
    <string name="example_professor_search">Ex: Michael Paulding</string>
    <string name="search_professor">Search Professor</string>
    <string name="select_instructor">[Select Instructor]</string>


    <!-- UTILITY RELATED STRINGS-->
    <string name="utility_search_menu_button">Search Utilities</string>
    <string name="water_fountain">Water Fountains</string>
    <string name="emergency_phone">Emergency Phones</string>
    <string name="restrooms">Restrooms</string>
    <string name="filter_instructor">Filter By Instructor</string>
    <string name="filter_subject">Filter By Subject</string>
    <string name="reset">Reset</string>string>

    <!-- COURSES RELATED STRING-->
    <string name="courses_search_menu_button">Search Courses</string>
    <string name="course_locate">Locate Building</string>

    <!-- FAQ RELATED STRINGS-->
    <string name="faq_menu_button">FAQ</string>

    <!-- CONTACT US RELATED STRINGS-->
    <string name="contact_us_menu_button">Contact the Devs</string>
    <string name="contacting_us"> App Review\nSubmit general questions about the app,
        or give us a rating and tell us what you like or dislike about our app.\n
        Technical\nReport any bugs you encounter  or submit any ideas on improving our app.\n via GMAIL</string>
    <string name="letters_cap">/140</string>

    <!-- CAMPUS CONTACT RELATED STRINGS-->
    <string name="campus_contacts">Campus Contacts</string>
    <!-- ONLINE RESOURCES RELATED STRINGS-->
    <string name="occ_website">OCC Main Website</string>
    <string name="blackboard">Blackboard</string>
    <string name="canvas">Canvas</string>
    <string name="my_occ">MyOCC Login Webpage</string>

    <!-- SPLASH SCREEN TIPS (ADD YOUR OWN JOKES OR SOMETHING) -->
    <string-array name="splash_screen_tips_list">
        <item>Happy Holidays!</item>
        <item>Last class meeting is 12/15</item>
        <item>Applied for transfer? Be sure to keep updated on deadlines!</item>
        <item>I need a monster</item>
        <item>YarrCampus sounds like YourCampus</item>
        <item>Paulding is awesome</item>
        <item>Shiver me timberrrs</item>
        <item>Yarr matey!</item>
        <item>WAKE ME UP INSIDE</item>

    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="locate_office_button">Locate Office</string>
    <string name="filter_crn">Filter by CRN</string>
    <string name="example_crn">Ex: 12345</string>
    <string name="filter_building">Filter by Building</string>
    <string name="send_email">Send Email</string>
    <string name="online_resources">Online Resources</string>

</resources>
