<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_utility_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.yarrcampus.UtilitySearchActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:text="@string/restrooms"
            android:layout_height="wrap_content"
            android:id="@+id/restroomCheck"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:gravity="center|start" />

        <CheckBox
            android:text="@string/emergency_phone"
            android:layout_height="wrap_content"
            android:id="@+id/emergencyPhoneCheck"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:gravity="center|start" />

        <CheckBox
            android:text="@string/water_fountain"
            android:layout_height="wrap_content"
            android:id="@+id/waterFountCheck"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:gravity="center|start" />
    </LinearLayout>

</LinearLayout>
